--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "console.img": "^2.2.0",
+    "highlight.js": "^9.13.1",
+    "marked": "^0.6.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
